--- a/src/app/combo-package/combo-package.component.scss
+++ b/src/app/combo-package/combo-package.component.scss
@@ -74,7 +74,7 @@
     border-radius: 50%;
     text-align: center;
     h1 {
-        font-size: 25px !important;
+        font-size: 25px;
         margin-top: 6px;
     }
     p {
